--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Our Family Recipes</title>
-    <script src = 'js/index.js'></script>
+    <script defer src = 'js/index.js'></script>
 </head>
 <header>
     <h1>Our Family Recipes</h1>
@@ -21,7 +21,14 @@
             <input type="textarea" id="instructions" name="instructions" placeholder="Enter Instructions"/>
             <label for="contributors">Inspired by / Contributors</label>
             <input type="text" id="contributors" name="contributors" placeholder="Inspired by / Contributors">
-            <input type="checkbox" id="checkbox"/>
+            <label for="starter">Starter</label>
+            <input type="checkbox" id="starter" name="starter"/>
+            <label for="main">Main</label>
+            <input type="checkbox" id="main" name="main"/>
+            <label for="side">Side</label>
+            <input type="checkbox" id="side" name="side"/>
+            <label for="dessert">Dessert</label>
+            <input type="checkbox" id="dessert" name="dessert"/>
             <input type="submit" value="Submit"/>
           </form>
     </section>
