--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
             <input type="submit" value="Submit"/>
           </form>
     </section>
+    <section id="recipe"></section>
 </main>
 </html>
