Added labels to DOM-rendered recipe

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <label for="recipe-title">Recipe Title</label>
             <input type="text" id="recipe-title" name="recipe-title" placeholder="Recipe Title" required="required"/>
             <label for="chef">by Chef</label>
-            <input type="text" id="chef" name="chef" placeholder="Enter Chef">
+            <input type="text" id="chef" name="chef" placeholder="Enter Chef Name">
             <lable for="family-story">Family Story</lable>
             <input type="textarea" id="family-story" name="family-story" placeholder="Family Story / Description">
             <label for="ingredients">Ingredients</label>
