--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 <header>
     <h1>Our Family Recipes</h1>
+    <nav>
+        <button id="all-recipes">All Recipes</button>
+    </nav>
 </header>
 <main>
     <section>
