Wired All Recipes button; Added and wired Clear Recipes button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>Our Family Recipes</h1>
     <nav>
         <button id="all-recipes">All Recipes</button>
+        <button id="clear-recipes">Clear Recipes</button>
     </nav>
 </header>
 <main>
