Changed recipe form checkbox to select menu

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <input type="textarea" id="instructions" name="instructions" placeholder="Enter Instructions"/>
             <label for="contributors">Inspired by / Contributors</label>
             <input type="text" id="contributors" name="contributors" placeholder="Inspired by / Contributors">
-            <label for="starter">Starter</label>
-            <input type="checkbox" id="starter" name="starter"/>
-            <label for="main">Main</label>
-            <input type="checkbox" id="main" name="main"/>
-            <label for="side">Side</label>
-            <input type="checkbox" id="side" name="side"/>
-            <label for="dessert">Dessert</label>
-            <input type="checkbox" id="dessert" name="dessert"/>
+            <label for="recipe-category">Recipe Category</label>
+            <select id="recipe-category" name="recipe-category">
+                <option value="please-select">--Select Category--</option>
+                <option value="starter">Starter</option>
+                <option value="main">Main</option>
+                <option value="side">Side</option>
+                <option value="dessert">Dessert</option>
+            </select>
             <input type="submit" value="Submit"/>
           </form>
     </section>
