Added IDs to select menu options

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <input type="text" id="contributors" name="contributors" placeholder="Inspired by / Contributors">
             <label for="recipe-category">Recipe Category</label>
             <select id="recipe-category" name="recipe-category">
-                <option value="please-select">--Select Category--</option>
-                <option value="starter">Starter</option>
-                <option value="main">Main</option>
-                <option value="side">Side</option>
-                <option value="dessert">Dessert</option>
+                <option id="select" value="please-select">--Select Category--</option>
+                <option id="starter" value="starter">Starter</option>
+                <option id="main" value="main">Main</option>
+                <option id="side" value="side">Side</option>
+                <option id="side" value="dessert">Dessert</option>
             </select>
             <input type="submit" value="Submit"/>
           </form>
