Wired in select menu to form and db

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <option id="starter" value="starter">Starter</option>
                 <option id="main" value="main">Main</option>
                 <option id="side" value="side">Side</option>
-                <option id="side" value="dessert">Dessert</option>
+                <option id="dessert" value="dessert">Dessert</option>
             </select>
             <input type="submit" value="Submit"/>
           </form>
