Added filter select menu to html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
             <input type="submit" value="Submit"/>
           </form>
     </section>
+    <section>
+        <form id="category-filter">
+            <label for="category-filter">Filter Recipes by Category</label>
+            <select name="category-filter">
+                <option value="please-select">--Select Category--</option>
+                <option value="starter">Starter</option>
+                <option value="main">Main</option>
+                <option value="side">Side</option>
+                <option value="dessert">Dessert</option>
+            </select>
+        </form>
+    </section>
     <section id="recipe"></section>
 </main>
 </html>
