--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <label for="chef">by Chef</label>
             <input type="text" id="chef" name="chef" placeholder="Enter Chef Name">
             <lable for="family-story">Family Story</lable>
-            <input type="textarea" id="family-story" name="family-story" placeholder="Family Story / Description">
+            <input type="textarea" id="family-story" name="family-story" placeholder="Family Story / Description"/>
             <label for="ingredients">Ingredients</label>
             <input type="text" id="ingredients" name="ingredients" placeholder="Enter Ingredients" required="required"/>
             <label for="instructions">Instructions</label>
             <input type="textarea" id="instructions" name="instructions" placeholder="Enter Instructions"/>
             <label for="contributors">Inspired by / Contributors</label>
-            <input type="text" id="contributors" name="contributors" placeholder="Inspired by / Contributors">
+            <input type="text" id="contributors" name="contributors" placeholder="Inspired by / Contributors"/>
             <label for="recipe-category">Recipe Category</label>
             <select id="recipe-category" name="recipe-category">
                 <option id="select" value="please-select">--Select Category--</option>
@@ -46,6 +46,7 @@
                 <option value="side">Side</option>
                 <option value="dessert">Dessert</option>
             </select>
+            <input type="submit" value="Filter"/>
         </form>
     </section>
     <section id="recipe"></section>
