Wire in CSS file; Added html header details

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html lang="en" dir="ltr">
 <head>
+    <meta charset="utf-8" />
     <title>Our Family Recipes</title>
+    <link rel="stylesheet" href="css/index.css" />
     <script defer src = 'js/index.js'></script>
 </head>
 <header>
