Added recipe card and form styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
 </header>
 <main>
-    <section>
+    <section class="container">
         <form>
             <label for="recipe-title">Recipe Title</label>
             <input type="text" id="recipe-title" name="recipe-title" placeholder="Recipe Title" required="required"/>
