Added title, nav, and filter css

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <script defer src = 'js/index.js'></script>
 </head>
 <header>
-    <h1>Our Family Recipes</h1>
+    <h1 id="title">Our Family Recipes</h1>
     <nav>
         <button id="all-recipes">All Recipes</button>
         <button id="clear-recipes">Clear Recipes</button>
     </nav>
 </header>
 <main>
-    <section class="container">
+    <section class="form-container">
         <form>
             <label for="recipe-title">Recipe Title</label>
             <input type="text" id="recipe-title" name="recipe-title" placeholder="Recipe Title" required="required"/>
