Created and styled new recipe title; adjusted new recipe form box css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </header>
 <main>
     <section class="form-container">
-        <form>
+        <p id="form-title">Add a New Family Recipe...</p>
+        <form id="new-recipe-form">
             <label for="recipe-title">Recipe Title</label>
             <input type="text" id="recipe-title" name="recipe-title" placeholder="Recipe Title" required="required"/>
             <label for="chef">by Chef</label>
