--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <input type="submit" value="Submit"/>
           </form>
     </section>
-    <section>
+    <section id="filter-container">
         <form id="category-filter">
             <label for="category-filter">Filter Recipes by Category</label>
             <select name="category-filter">
@@ -52,6 +52,7 @@
             </select>
             <input type="submit" value="Filter"/>
         </form>
+        <span id="visible-recipes"></span>
     </section>
     <section id="recipe"></section>
 </main>
