Changed visible counter element from span to p and adjusted in-line styling

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </select>
             <input type="submit" value="Filter"/>
         </form>
-        <span id="visible-recipes"></span>
     </section>
+    <p id="visible-recipes" style="text-align:center"></p>
     <section id="recipe"></section>
 </main>
 </html>
