--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
             <input type="text" id="recipe-title" name="recipe-title" placeholder="Recipe Title" required="required"/>
             <label for="chef">by Chef</label>
             <input type="text" id="chef" name="chef" placeholder="Enter Chef Name">
-            <lable for="family-story">Family Story</lable>
-            <input type="textarea" id="family-story" name="family-story" placeholder="Family Story / Description"/>
-            <label for="ingredients">Ingredients</label>
-            <input type="text" id="ingredients" name="ingredients" placeholder="Enter Ingredients" required="required"/>
-            <label for="instructions">Instructions</label>
-            <input type="textarea" id="instructions" name="instructions" placeholder="Enter Instructions"/>
+            <!--label for="family-story">Family Story</lable>
+            <input type="textarea" id="family-story" name="family-story" placeholder="Family Story / Description"/-->
+            <textarea name="family-story" rows="10" cols="20">Family Story... / Description...</textarea>
+            <!--label for="ingredients">Ingredients</label>
+            <input type="text" id="ingredients" name="ingredients" placeholder="Enter Ingredients" required="required"/-->
+            <textarea name="ingredients" rows="10" cols="20">Ingredients...</textarea>
+            <!--label for="instructions">Instructions</label>
+            <input type="textarea" id="instructions" name="instructions" placeholder="Enter Instructions"/-->
+            <textarea name="instructions" rows="10" cols="20">Instructions...</textarea>
             <label for="contributors">Inspired by / Contributors</label>
             <input type="text" id="contributors" name="contributors" placeholder="Inspired by / Contributors"/>
             <label for="recipe-category">Recipe Category</label>
