--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
             <label for="recipe-title">Recipe Title</label>
             <input type="text" id="recipe-title" name="recipe-title" placeholder="Recipe Title" required="required"/>
             <label for="chef">by Chef</label>
-            <input type="text" id="chef" name="chef" placeholder="Enter Chef Name">
+            <input type="text" id="chef" name="chef" placeholder="Enter Chef Name"><br><br>
             <!--label for="family-story">Family Story</lable>
             <input type="textarea" id="family-story" name="family-story" placeholder="Family Story / Description"/-->
-            <textarea name="family-story" rows="10" cols="20">Family Story... / Description...</textarea>
+            <textarea name="family-story" >Family Story... / Description...</textarea>
             <!--label for="ingredients">Ingredients</label>
             <input type="text" id="ingredients" name="ingredients" placeholder="Enter Ingredients" required="required"/-->
-            <textarea name="ingredients" rows="10" cols="20">Ingredients...</textarea>
+            <textarea name="ingredients" >Ingredients...</textarea>
             <!--label for="instructions">Instructions</label>
             <input type="textarea" id="instructions" name="instructions" placeholder="Enter Instructions"/-->
-            <textarea name="instructions" rows="10" cols="20">Instructions...</textarea>
+            <textarea name="instructions" class="form-textarea">Instructions...</textarea><br><br>
             <label for="contributors">Inspired by / Contributors</label>
-            <input type="text" id="contributors" name="contributors" placeholder="Inspired by / Contributors"/>
+            <input type="text" id="contributors" name="contributors" placeholder="Inspired by / Contributors"/><br><br>
             <label for="recipe-category">Recipe Category</label>
             <select id="recipe-category" name="recipe-category">
                 <option id="select" value="please-select">--Select Category--</option>
@@ -39,7 +39,7 @@
                 <option id="main" value="main">Main</option>
                 <option id="side" value="side">Side</option>
                 <option id="dessert" value="dessert">Dessert</option>
-            </select>
+            </select><br><br>
             <input type="submit" value="Submit"/>
           </form>
     </section>
